# genuint

./: Cargo.toml  build.rs  generic_uint.long-type-10116303664705717435.txt  generic_uint.long-type-13110538612459202954.txt  generic_uint.long-type-18092601414397578331.txt
generic-uint-proc/: Cargo.toml
generic-uint-proc/src/: lib.rs
proc/: Cargo.toml
proc/src/: lib.rs
src/: __mac.rs  array.rs  capnum.rs  condty.rs  const_fmt.rs  consts.rs  internals.rs  lib.rs  maxint.rs  ops.rs  small.rs  tcon.rs  tern.rs  tfun.rs  uimpl.rs  uint.rs  uops.rs  utils.rs
src/__mac/: arr.rs  cond.rs  lit.rs
src/array/: arr_api.rs  arr_deq.rs  arr_utils.rs  arr_vec.rs  array_impls.rs  container.rs  convert.rs  core_impl.rs  extra.rs  extra_impl.rs  func_mods.rs  helper.rs  impls.rs  retype.rs  try_from_slice.rs  try_retype.rs  unsize.rs
src/array/arr_deq/: core_impl.rs  deque_utils.rs
src/array/arr_vec/: core_impl.rs
src/array/core_impl/: cmp.rs  convert.rs  iter.rs  tuple_convert.rs
src/array/extra_impl/: cmp.rs  core_impl.rs  iter.rs  retypes.rs
src/array/impls/: base.rs  cmp.rs  convert.rs  convert_impl.rs  core_impl.rs  iter.rs  layout_convert.rs  tuple_convert.rs
src/capnum/: capnum_utils.rs  to_prim.rs
src/condty/: direct.rs
src/ops/: add.rs  bitmath.rs  bitwise.rs  cmp.rs  divrem.rs  helper.rs  log.rs  mul.rs  pow.rs  primitives.rs  satdec.rs  shift.rs  sub.rs  testing.rs  trivial.rs
src/tern/: raw.rs
src/uops/: cmp.rs  divrem.rs  helper.rs  log.rs  mul.rs  primitives.rs  shift.rs  sub.rs  testing.rs  trivial.rs
